--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 03:04:00 PM</p>
+    <p class="lastupdate">09/09/2020 03:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -339,11 +339,11 @@
           </td>
           <td class="data new_row">
             0<br/>
-            308
+            306
           </td>
           <td class="data new_row">
             0<br/>
-            355
+            354
           </td>
           <td class="data new_row">
             2<br/>
@@ -398,8 +398,8 @@
           <td class="data new_row">
             49<br/>
             <span class="timestamp">07:57:01 AM</span><br/>
-            42<br/>
-            <span class="timestamp">12:00:01 AM</span>
+            41<br/>
+            <span class="timestamp">03:04:02 PM</span>
           </td>
           <td class="data new_row">
             49<br/>
