--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 03:49:00 PM</p>
+    <p class="lastupdate">09/09/2020 03:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">79.7&#176;F</td>
+        <td class="data">79.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">79.7&#176;F</td>
+        <td class="data">79.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">79.7&#176;F</td>
+        <td class="data">79.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.0&#176;F</td>
+        <td class="data">47.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.826 inHg (-0.020)</td>
+        <td class="data">29.828 inHg (-0.018)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph SSW (202&#176;)</td>
+        <td class="data">6 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.1&#176;F</td>
+        <td class="data">79.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:47:50 PM">
-            79.7</span><br/>
+          <span title="03:49:32 PM">
+            79.8</span><br/>
           <span title="07:08:29 AM">
             56.5</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:47:50 PM" class="hival">
-            79.7</span>
+          <span title="03:49:32 PM" class="hival">
+            79.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          282
+          279
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:38:02 PM">
-            79.1</span><br/>
+          <span title="03:49:02 PM">
+            79.2</span><br/>
           <span title="08:05:01 AM">
             71.9</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 1 hour, 2 minutes</td>
+      <td class="data">8 days, 1 hour, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 1 hour, 2 minutes</td>
+      <td class="data">8 days, 1 hour, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
