--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 04:09:00 PM</p>
+    <p class="lastupdate">09/09/2020 04:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">79.7&#176;F</td>
+        <td class="data">79.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">79.7&#176;F</td>
+        <td class="data">79.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">79.7&#176;F</td>
+        <td class="data">79.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.6&#176;F</td>
+        <td class="data">45.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">30%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.824 inHg (-0.021)</td>
+        <td class="data">29.825 inHg (-0.021)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph SSW (202&#176;)</td>
+        <td class="data">8 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:29:40 PM">
             58.4</span><br/>
-          <span title="04:08:28 PM">
-            44.6</span>
+          <span title="04:11:24 PM">
+            44.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          270
+          266
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 1 hour, 22 minutes</td>
+      <td class="data">8 days, 1 hour, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 1 hour, 22 minutes</td>
+      <td class="data">8 days, 1 hour, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
