--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 04:19:00 PM</p>
+    <p class="lastupdate">09/09/2020 04:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.6&#176;F</td>
+        <td class="data">43.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">28%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.822 inHg (-0.027)</td>
+        <td class="data">29.823 inHg (-0.023)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph S (180&#176;)</td>
+        <td class="data">12 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:49:32 PM">
-            79.8</span><br/>
+          <span title="04:20:38 PM">
+            79.9</span><br/>
           <span title="07:08:29 AM">
             56.5</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:49:32 PM" class="hival">
-            79.8</span>
+          <span title="04:20:38 PM" class="hival">
+            79.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:29:40 PM">
             58.4</span><br/>
-          <span title="04:11:24 PM">
-            44.5</span>
+          <span title="04:23:52 PM">
+            43.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:23:09 AM">
             85</span><br/>
-          <span title="04:08:28 PM">
-            29</span>
+          <span title="04:23:50 PM">
+            28</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:23:09 AM (Wednesday)">
@@ -444,11 +444,11 @@
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          264
+          261
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          352
+          351
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 1 hour, 32 minutes</td>
+      <td class="data">8 days, 1 hour, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 1 hour, 32 minutes</td>
+      <td class="data">8 days, 1 hour, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
